# Autonomous-Driving-Vehicle---EE-Final-Project

./: CMakeLists.txt  README.md  main.cpp  main2.cpp
MachineLearning/: Object_cascade.xml  Object_cascade1.xml  Object_cascade111.xml  Object_cascade222.xml  Stop_cascade.xml  Stop_cascade2222.xml  Trafficc_cascade.xml  Trafficc_cascade1.xml  uTurn_cascade.xml
arduino_code/: arduino_code.ino
